tests/paczka1/fuzzy1/54046316.err
Error in line 5: mq2ZaZKIA S574 55,3
Error in line 36: j96z8 A210 49,8
